hphp/hack/test/typecheck/stricter_consts/interface_interface_1.bad.php.exp
File "interface_interface_1.bad.php", line 14, characters 7-7:
Class `A` does not correctly implement all required members  (Typing[4374])
  File "interface_interface_1.bad.php", line 14, characters 20-21:
  Some members are incompatible with those declared in type `IA`
  File "interface_interface_1.bad.php", line 11, characters 16-21:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_interface_1.bad.php", line 7, characters 15-20:
  `ONCALL` inherited from `IA`
  File "interface_interface_1.bad.php", line 11, characters 16-21:
  conflicts with constant `ONCALL` inherited from `IB`.
